--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
             "email": "m.widter@gmx.at"
         }
     ],
-    "require": {}
+    "require": {
+        "doctrine/dbal": "^2.9"
+    }
 }
